<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Sensors2OSC</string>
    <string name="action_settings">Settings</string>
    <string name="host">Host</string>
    <string name="multi_touch">Multi-touch</string>
    <string name="communication">Communication</string>
    <string name="port">Port</string>
    <string name="sensors">Sensors</string>
    <string name="sensitity">Sensitivity</string>
    <string name="title_activity_about">About</string>
    <string name="action_about">About</string>
    <string name="about_copyright" translatable="false">© Thomas Mayer, Antonio Deusany de Carvalho Junior &amp; contributors 2014 - 2022, &lt;a href=&quot;http://sensors2.org/osc/&quot;>sensors2.org/osc&lt;/a>&lt;br>&lt;br>Contributors: Tal Kirshboim, naofum (Japanese translation), Pander Musubi (Dutch translation), J. Lavoie (French translation), comradekingu (Norwegian Bokmål translation)</string>
    <string name="about_buglinks">Please report bugs on &lt;a href=&quot;https://github.com/SensorApps/Sensors2OSC/issues&quot;>GitHub&lt;/a> or send an email to &lt;a href=&quot;mailto:osc-bugs@sensors2.org&quot;">osc-bugs@sensors2.org&lt;/a>. We will take a look at it.</string>
    <string name="about_license">License</string>
    <string name="about_mit_license_1">Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the &quot;Software&quot;), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:</string>
    <string name="about_mit_license_2">The above copyright notice and this permission notice shall be included in
all copies or substantial portions of the Software.</string>
    <string name="about_mit_license_3"><![CDATA[THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
THE SOFTWARE.]]></string>
    <string name="about_components">Used Components</string>
    <string name="about_license_javaosc">&lt;a href=&quot;http://www.illposed.com/software/javaosc.html&quot;>JavaOSC&lt;/a>, license can be found at &lt;a href=&quot;https://raw.githubusercontent.com/hoijui/JavaOSC/master/LICENSE&quot;>https://raw.githubusercontent.com/hoijui/JavaOSC/master/LICENSE&lt;/a>.</string>
    <string name="about_license_opentracks">Parts of the Bluetooth code is copied from &lt;a href=&quot;https://github.com/OpenTracksApp/OpenTracks&quot;>OpenTracks&lt;/a>, license can be found at &lt;a href=&quot;https://raw.githubusercontent.com/OpenTracksApp/OpenTracks/refs/heads/main/LICENSE&quot;>https://raw.githubusercontent.com/OpenTracksApp/OpenTracks/refs/heads/main/LICENSE&lt;/a>.</string>
    <string name="send_data">Send data</string>
    <string name="action_guide">Help</string>
    <string name="text_guide_headline">Help</string>
    <string name="text_guide">Depending on your phone, you have several sensors and values available.</string>
    <string name="text_available_sensors">Available Device Sensors</string>
    <string name="text_guide_multitouch">When you open the multi-touch area, each touchpoint will send its coordinates via OSC.\nThe address is in the format /touch&lt;index&gt;, where index is a 1-based. The coordinates are sent as a list of 2 float values, X and Y and range from 0 to 1.\nLifting the finger will send -1 on both values to enable you to detect that event.</string>
    <string name="text_guide_multitouch_headline">Multi-touch</string>
    <string name="text_guide_geo">If you enable geopositioning for Sensors2OSC, the app will send data to the /location OSC address, whenever a new location is registered by the sensors.\nThis will send out a list of 5 values: Latitude, longitude, altitude, bearing and accuracy.\nAltitude and accuracy will be in meters, the other values in degrees.\nNot every device will populate all values, some may be constant 0.</string>
    <string name="text_guide_geo_headline">Geopositioning</string>
    <string name="text_guide_nfc">If your phone can read NFC tokens, then the value of these tokens will be sent to the OSC address /nfc.</string>
    <string name="text_guide_nfc_headline">Near Field Communication (NFC)</string>
    <string name="guide_max_range">Max range</string>
    <string name="guide_resolution">Resolution</string>
    <string name="guide_osc_address">OSC address</string>
    <string name="sensor_nfc">Near Field Communication</string>
    <string name="sensor_accelerometer">Accelerometer</string>
    <string name="sensor_magnetic_field">Magnetic Field</string>
    <string name="sensor_orientation">Orientation</string>
    <string name="sensor_gyroscope">Gyroscope</string>
    <string name="sensor_light">Light</string>
    <string name="sensor_pressure">Pressure</string>
    <string name="sensor_temperature">Temperature</string>
    <string name="sensor_proximity">Proximity</string>
    <string name="sensor_gravity">Gravity</string>
    <string name="sensor_linear_acceleration">Linear Acceleration</string>
    <string name="sensor_rotation_vector">Rotation Vector</string>
    <string name="sensor_relative_humidity">Relative Humidity</string>
    <string name="sensor_ambient_temperature">Ambient Temperature</string>
    <string name="sensor_magnetic_field_uncalibrated">Magnetic Field (uncalibrated)</string>
    <string name="sensor_game_rotation_vector">Game Rotation Vector (uncalibrated)</string>
    <string name="sensor_gyroscope_uncalibrated">Gyroscope (uncalibrated)</string>
    <string name="sensor_significant_motion">Significant Motion</string>
    <string name="sensor_step_counter">Step Counter</string>
    <string name="sensor_step_detector">Step Detector</string>
    <string name="sensor_geomagnetic_rotation_vector">Geomagnetic Rotation Vector</string>
    <string name="sensor_heartrate">Heartrate</string>
    <string name="sensor_tilt_detector">Tilt Detector</string>
    <string name="sensor_wake_gesture">Wake Gesture</string>
    <string name="sensor_glance_gesture">Glance Gesture</string>
    <string name="sensor_pick_up_gesture">Pick Up Gesture</string>
    <string name="sensor_wrist_tilt_gesture">Wrist Tilt Gesture</string>
    <string name="sensor_unknown">Unknown Sensor</string>
    <string name="text_guide_floatlist">Sensor values are sent as a list of float values. Depending on the sensor, this can range from 1 to 16 values.</string>
    <string name="guide_dimensions">Number of values</string>
    <string name="sensor_inclination">Inclination</string>
    <string name="return_to_app">Return to Sensors2OSC</string>
    <string name="sensor_type_hinge_angle" >Hinge Angle</string>
    <string name="sensor_type_accelorometer_uncalibrated" >Accelerometer (uncalibrated)</string>
    <string name="sensor_type_low_latency_offbody_detect" >Detect Onbody / Offbody</string>
    <string name="sensor_type_dynamic_sensor_meta" >Dynamic Sensor (meta event)</string>
    <string name="sensor_type_heart_beat" >Heart Beat</string>
    <string name="sensor_type_stationary_detect" >Stationary Detection</string>
    <string name="sensor_type_pose_6dof" >Pose (6 Degrees of Freedom)</string>
    <string name="sensor_type_motion_detect" >Motion Detection</string>
    <string name="sensor_type_device_orientation" >Device Orientation</string>
    <string name="sensor_type_heading">Heading Relative to North</string>
    <string name="sensor_type_gyroscope_limited_axes_uncalibrated">Gyroscope (limited axes, uncalibrated)</string>
    <string name="sensor_type_gyroscope_limited_axes">Gyroscope (limited axes)</string>
    <string name="sensor_type_accelerometer_limited_axes_uncalibrated">Accelerometer (limited axes, uncalibrated)</string>
    <string name="sensor_type_accelerometer_limited_axes">Accelerometer (limited axes)</string>
    <string name="sensor_type_head_tracker">Head Tracker</string>
    <string name="send_as_bundle">Send OSC values as bundle</string>
    <string name="keep_screen_alive">Keep screen alive when sending data</string>
    <string name="text_guide_bluetooth">If the Android device is connected to bluetooth devices, that announce themselves as sensors, then their values can be transmitted via OSC. Currently only a limited number of device characteristics are supported, mostly sports related. This will not work with devices that do not show up in the list of known devices, as these devices only communicate with the app of the manufacturer. The data is sent to addresses starting with /bt and a portion derived from the Bluetooth characteric, and may change in the future. THIS FEATURE IS NOT TESTED WELL AND MAY CRASH THE APP.</string>
    <string name="text_guide_bluetooth_headline">Bluetooth Sensors (Experimental)</string>
</resources>
