<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/communication" android:key="comm_category">
        <org.sensors2.common.preferences.ExtendedEditTextPreference
            android:defaultValue="localhost"
            android:key="pref_comm_host"
            android:persistent="true"
            android:title="@string/host"/>
        <org.sensors2.common.preferences.ExtendedEditTextPreference
            android:defaultValue="9000"
            android:key="pref_comm_port"
            android:numeric="integer"
            android:persistent="true"
            android:title="@string/port"/>
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_enable_nfc"
            android:persistent="true"
            android:title="@string/register_nfc" />
    </PreferenceCategory>
    <!-- <PreferenceCategory android:title="@string/sensors">
         <org.sensors2.common.preferences.ExtendedEditTextPreference
             android:defaultValue="0"
             android:key="pref_general_sensitivity"
             android:numeric="decimal"
             android:persistent="true"
             android:title="@string/sensitity"/>
     </PreferenceCategory>-->
</PreferenceScreen>