<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingTop="@dimen/activity_vertical_halfmargin">

    <TextView
        android:id="@+id/group_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:text="group"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:text="@string/guide_osc_address"/>

    <LinearLayout
        android:id="@+id/sensor_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"/>

    <TextView
        android:id="@+id/range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:text="@string/guide_max_range"/>

    <TextView
        android:id="@+id/resolution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:text="@string/guide_resolution"
        android:paddingBottom="@dimen/activity_vertical_halfmargin"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
</LinearLayout>