<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/guideHeadline"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_guide_headline"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/textViewGuide"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_guide"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/availSensorsHeadline"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_available_sensors"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/textViewAvailableSensors"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:visibility="visible"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>